# SkillslyBackend

./: .gitignore  Dockerfile  package-lock.json  package.json  requirements.txt  skaffold.yaml
skillsly_ag/: .eslintrc.js  Dockerfile  docker-compose.yml  package-lock.json  package.json  shining-env-347701-f91115ed7948.json  tsconfig.json
skillsly_auth_ms/: Dockerfile  README.md  docker-compose.yml  package-lock.json  package.json  tsconfig.json
skillsly_chat_ms/: .gitignore  Makefile  README.md  docker-compose.yml  go.mod  go.sum
skillsly_comment_ms/: .gitignore  Dockerfile  package-lock.json  package.json
skillsly_interface/: .gitignore  Dockerfile  pom.xml
skillsly_notification_handler_ms/: .dockerignore  Dockerfile  docker-compose.yml  package-lock.json  package.json  tsconfig.json
skillsly_story_ms/: Cargo.toml  Dockerfile  README.md  docker-compose.yml  skillsly_story_db.sql
skillsly_story_ms/migrations/: initial.sql
skillsly_story_ms/src/lib/: mod.rs
skillsly_story_ms/src/lib/application/web/: api.rs
skillsly_story_ms/src/lib/domain/: mod.rs  time.rs
skillsly_story_ms/src/lib/domain/story/: mod.rs
skillsly_story_ms/src/lib/domain/story/field/: content.rs  created_at.rs  description.rs  id.rs  media_locator.rs  mod.rs  owner_id.rs  story_id.rs  viewed_at.rs
skillsly_story_ms/src/lib/infrastructure/data/: db_id.rs  mod.rs
skillsly_story_ms/src/lib/infrastructure/data/story/: mod.rs  model.rs  query.rs
skillsly_story_ms/src/lib/service/: action.rs  mod.rs
skillsly_story_ms/src/lib/service/ask/: create.rs  delete.rs  mod.rs  query.rs
(+876 files in other folders)
