[package]
name = "skillsly_story_ms"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "skillsly_story_ms"
path = "src/lib/mod.rs"

[dependencies]
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
thiserror = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "0.8", features = ["serde", "v4"] }
derive_more = "0.99"
rocket = { version = "0.5.0-rc.1", features = ["json"] }
structopt = "0.3"
dotenv = "0.15"

[dependencies.sqlx]
version = "0.5.1"
features = [
    "runtime-tokio-rustls", "macros", "postgres", "migrate",
    "chrono", "uuid"
]
